--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,3 +14,10 @@ dependencies = [
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry]
+name = "jokebot"
+version = "0.1.0"
+description = ""
+readme = "README.md"
+
